--- a/SpelunkyPracticeTool/SpelunkyPracticeTool.csproj
+++ b/SpelunkyPracticeTool/SpelunkyPracticeTool.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Core.cs" />
+    <Compile Include="EntityData.cs" />
     <Compile Include="entity_list.cs">
       <SubType>Form</SubType>
     </Compile>
