--- a/SpelunkyPracticeTool/SpelunkyPracticeTool.csproj
+++ b/SpelunkyPracticeTool/SpelunkyPracticeTool.csproj
@@ -63,6 +63,12 @@
     <Compile Include="Memory.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TutorialPractice.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TutorialPractice.Designer.cs">
+      <DependentUpon>TutorialPractice.cs</DependentUpon>
+    </Compile>
     <Compile Include="Values.cs" />
     <EmbeddedResource Include="entity_list.resx">
       <DependentUpon>entity_list.cs</DependentUpon>
@@ -79,6 +85,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="TutorialPractice.resx">
+      <DependentUpon>TutorialPractice.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
